(write section): add custom form styling, and gap for need ideas list items

--- a/style.css
+++ b/style.css
@@ -80,9 +80,17 @@ label, .col-form-label {
     font-size: 18px;
 }
 
+#createForm {
+    background-color: var(--color-champagne);
+}
+
+.list-group-item {
+    color: var(--color-oxford);
+} 
+
 #postButton {
     background-color: var(--color-viridian);
-    color: var(--color-champagne);
+    color: var(--color-floralwhite);
 }
 
 /* decorative image styling */
