feat(padPosts): add script to clone and prepend post content, added date formatting

--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ label, .col-form-label {
 }
 
 /* padPosts section */
-#templatePost {
+.templatePost {
     background-color: var(--color-lilac);
     color: var(--color-champagne);
 }
